--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,16 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*",
+        "phpunit/phpunit": "4.8 - 5.7",
         "gamegos/php-code-sniffer": "*"
     },
     "autoload-dev": {
         "psr-4": {
             "Gamegos\\Util\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "cache-dir": ".tmp/composer"
     },
     "authors": [
         {
